# ChangeLog for x11-libs/fltk
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/fltk/ChangeLog,v 1.137 2010/01/10 17:50:46 nixnut Exp $

  10 Jan 2010; nixnut <nixnut@gentoo.org> fltk-2.0_pre6786-r1.ebuild:
  ~ppc'd #294147

  10 Jan 2010; Christian Faulhammer <fauli@gentoo.org> fltk-1.1.9-r1.ebuild,
  fltk-2.0_pre6786-r1.ebuild:
  stable x86, bug 294147

  10 Jan 2010; Samuli Suominen <ssuominen@gentoo.org> fltk-1.1.9-r1.ebuild,
  fltk-2.0_pre6786-r1.ebuild:
  amd64 stable wrt #294147

  03 Dec 2009; Jeroen Roovers <jer@gentoo.org> fltk-1.1.9-r1.ebuild:
  Marked ~hppa (bug #294147).

  03 Dec 2009; Jeroen Roovers <jer@gentoo.org> fltk-2.0_pre6786-r1.ebuild:
  Marked ~hppa (bug #294147).

  25 Nov 2009; Markus Meier <maekke@gentoo.org> fltk-2.0_pre6786-r1.ebuild:
  restore ~arm keyword, bug #294147

  03 Nov 2009; Andrey Kislyuk <weaver@gentoo.org>
  fltk-2.0_pre6786-r1.ebuild:
  Add missing dependency on x11-libs/libXi

  16 Oct 2009; Markus Meier <maekke@gentoo.org> fltk-1.1.9.ebuild:
  amd64 stable, bug #284976

  27 Sep 2009; nixnut <nixnut@gentoo.org> fltk-1.1.9.ebuild:
  ppc stable #284976

  16 Sep 2009; Christian Faulhammer <fauli@gentoo.org> fltk-1.1.9.ebuild:
  stable x86, bug 284976

  06 Sep 2009; Brent Baude <ranger@gentoo.org> fltk-2.0_pre6786.ebuild:
  Marking fltk-2.0_pre6786 ppc64 for bug 263409

  04 Sep 2009; Mike Frysinger <vapier@gentoo.org> fltk-1.1.9-r1.ebuild,
  fltk-2.0_pre6786-r1.ebuild:
  Restore ia64 KEYWORD.

  15 Jul 2009; Mounir Lamouri <volkmar@gentoo.org> fltk-2.0_pre6786.ebuild:
  Stable on ppc. Bug 276432

  15 Jul 2009; Raúl Porcel <armin76@gentoo.org> fltk-2.0_pre6786.ebuild:
  arm/ia64 stable wrt #276547

  12 Jul 2009; Tobias Klausmann <klausman@gentoo.org>
  fltk-2.0_pre6786.ebuild:
  Stable on alpha, bug #276547

  09 Jul 2009; Jeroen Roovers <jer@gentoo.org> fltk-2.0_pre6786.ebuild:
  Stable for HPPA (bug #276547).
